Update index.html with new name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus CLI - Encrypted File Vault</title>
+    <title>Zephyrus CLI - Encrypted File Vault</title>
     <style>
         * {
             margin: 0;
@@ -174,12 +174,12 @@
     <div class="container">
         <header>
             <div class="logo">🔐</div>
-            <h1>Nexus CLI</h1>
+            <h1>Zephyrus CLI</h1>
             <p class="tagline">Your GitHub, Your Vault, Your Rules</p>
         </header>
 
         <div class="description">
-            <strong>Nexus CLI</strong> transforms your GitHub repository into a private, encrypted file vault. 
+            <strong>Zephyrus CLI</strong> transforms your GitHub repository into a private, encrypted file vault. 
             Store sensitive documents, backups, and confidential files with <strong>AES-256-GCM encryption</strong>—all from your command line. 
             No subscriptions. No proprietary infrastructure. No secrets to trust anyone with.
         </div>
@@ -200,17 +200,17 @@
         </div>
 
         <div class="links">
-            <a href="https://github.com/NexusCLI/NexusCLI/wiki/WHITEPAPER.md" class="link-btn">
+            <a href="https://github.com/zephyrus-development/zephyrus-cli/wiki/WHITEPAPER.md" class="link-btn">
                 <div class="link-icon">📘</div>
                 <div class="link-title">Whitepaper</div>
                 <div class="link-description">Technical architecture & cryptography</div>
             </a>
-            <a href="https://github.com/NexusCLI/NexusCLI/releases" class="link-btn">
+            <a href="https://github.com/zephyrus-development/zephyrus-cli/releases" class="link-btn">
                 <div class="link-icon">🚀</div>
                 <div class="link-title">Latest Release</div>
                 <div class="link-description">Download v1.0.0 and release notes</div>
             </a>
-            <a href="https://github.com/NexusCLI/NexusCLI" class="link-btn">
+            <a href="https://github.com/zephyrus-development/zephyrus-cli" class="link-btn">
                 <div class="link-icon">💻</div>
                 <div class="link-title">Source Code</div>
                 <div class="link-description">View on GitHub, fork, contribute</div>
@@ -219,9 +219,8 @@
 
         <footer>
             <p>Made with ❤️ for the privacy-conscious community</p>
-            <p>© 2026 Nexus CLI. MIT License.</p>
+            <p>© 2026 Zephyrus CLI. MIT License.</p>
         </footer>
     </div>
 </body>
 </html>
-
