--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
 
         <div class="links">
-            <a href="https://github.com/zephyrus-development/zephyrus-cli/wiki/WHITEPAPER.md" class="link-btn">
+            <a href="https://github.com/zephyrus-development/zephyrus-cli/wiki/WHITEPAPER" class="link-btn">
                 <div class="link-icon">📘</div>
                 <div class="link-title">Whitepaper</div>
                 <div class="link-description">Technical architecture & cryptography</div>
@@ -224,3 +224,4 @@
     </div>
 </body>
 </html>
+
