--- a/shared/index.html
+++ b/shared/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zephyrus - Secure File Download</title>
+    <title>Zephyrus - Secure File Sharing</title>
     <style>
         * {
             margin: 0;
@@ -31,6 +31,10 @@
             text-align: center;
         }
 
+        .header {
+            margin-bottom: 30px;
+        }
+
         .logo {
             font-size: 48px;
             margin-bottom: 20px;
@@ -44,7 +48,7 @@
 
         .subtitle {
             color: #666;
-            margin-bottom: 30px;
+            margin-bottom: 10px;
             font-size: 14px;
         }
 
@@ -93,10 +97,11 @@
             display: flex;
             gap: 10px;
             margin-top: 20px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         button {
-            flex: 1;
             padding: 12px 20px;
             border: none;
             border-radius: 8px;
@@ -185,13 +190,17 @@
         .hidden {
             display: none;
         }
+
+
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="logo">🔐</div>
-        <h1>Zephyrus Secure Download</h1>
-        <p class="subtitle">Decrypting your shared file...</p>
+        <div class="header">
+            <div class="logo">🔐</div>
+            <h1>Zephyrus Secure Sharing</h1>
+            <p class="subtitle">Decrypting your shared file...</p>
+        </div>
 
         <div id="errorBox" class="error hidden"></div>
         <div id="successBox" class="success hidden"></div>
@@ -211,7 +220,10 @@
         </div>
 
         <div class="button-group">
-            <button id="downloadBtn" class="btn-primary hidden" onclick="downloadFile()">
+            <button id="viewBtn" class="btn-primary hidden" onclick="viewFile()">
+                👁️ View File
+            </button>
+            <button id="downloadBtn" class="btn-secondary hidden" onclick="downloadFile()">
                 📥 Download File
             </button>
             <button id="retryBtn" class="btn-secondary hidden" onclick="location.reload()">
@@ -232,6 +244,7 @@
 
         let decryptedData = null;
         let fileName = null;
+        let mimeType = 'application/octet-stream';
 
         async function main() {
             try {
@@ -285,7 +298,7 @@
                 // Decrypt the file
                 decryptedData = await decryptFile(encryptedBuffer, password);
 
-                updateStatus('File ready for download');
+                updateStatus('File ready to view');
                 setProgress(100);
 
                 // Use provided filename or derive from reference
@@ -293,15 +306,19 @@
                     fileName = `zephyrus_file_${reference}.bin`;
                 }
 
+                // Determine MIME type from filename
+                determineMimeType(fileName);
+
                 document.getElementById('fileInfo').classList.remove('hidden');
                 document.getElementById('fileName').textContent = fileName;
 
+                document.getElementById('viewBtn').classList.remove('hidden');
                 document.getElementById('downloadBtn').classList.remove('hidden');
                 document.getElementById('statusMessage').innerHTML = '✅ File decrypted successfully!';
 
                 // Show success message
                 const successBox = document.getElementById('successBox');
-                successBox.textContent = 'File is ready to download. Click the button below to save it to your device.';
+                successBox.textContent = 'File is ready to view or download. Click the button below to get started.';
                 successBox.classList.remove('hidden');
 
             } catch (error) {
@@ -309,6 +326,29 @@
                 updateStatus('Error: ' + error.message, true);
                 document.getElementById('retryBtn').classList.remove('hidden');
             }
+        }
+
+        function determineMimeType(filename) {
+            const ext = filename.toLowerCase().split('.').pop();
+            const mimeTypes = {
+                'txt': 'text/plain',
+                'json': 'application/json',
+                'html': 'text/html',
+                'htm': 'text/html',
+                'xml': 'application/xml',
+                'csv': 'text/csv',
+                'md': 'text/markdown',
+                'js': 'application/javascript',
+                'css': 'text/css',
+                'pdf': 'application/pdf',
+                'jpg': 'image/jpeg',
+                'jpeg': 'image/jpeg',
+                'png': 'image/png',
+                'gif': 'image/gif',
+                'webp': 'image/webp',
+                'svg': 'image/svg+xml'
+            };
+            mimeType = mimeTypes[ext] || 'application/octet-stream';
         }
 
         async function decryptFile(encryptedData, password) {
@@ -374,13 +414,32 @@
             document.getElementById('progressFill').style.width = percent + '%';
         }
 
+        function viewFile() {
+            if (!decryptedData) {
+                alert('No file data available');
+                return;
+            }
+
+            try {
+                // Create a blob from the decrypted data
+                const blob = new Blob([decryptedData], { type: mimeType });
+                const url = window.URL.createObjectURL(blob);
+                
+                // Open in a new tab
+                window.open(url, '_blank');
+            } catch (e) {
+                console.error('Could not open file:', e);
+                alert('Failed to open file');
+            }
+        }
+
         function downloadFile() {
             if (!decryptedData) {
                 alert('No file data available');
                 return;
             }
 
-            const blob = new Blob([decryptedData], { type: 'application/octet-stream' });
+            const blob = new Blob([decryptedData], { type: mimeType });
             const url = window.URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.href = url;
