Update index.html with embed info

--- a/raw/index.html
+++ b/raw/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zephyrus - Raw File</title>
+    <meta property="og:title" content="Shared File via Zephyrus">
+    <meta property="og:description" content="View securely shared file">
+    <meta property="og:type" content="website">
 </head>
 <body>
     <script>
